w00t        2006/06/17 07:28:37 UTC	(20060617-5392)
  Log:
  Not all AKILLs on inspircd should be permanent.

  Changes:	Modified:
  +1 -1		trunk/protocol/inspircd.c (File Modified) 


w00t        2006/06/17 04:50:19 UTC	(20060617-5390)
  Log:
  - Remove OS KLINE -- it's only been deprecated since 0.2 or so.

  Changes:	Modified:
  +2 -5		trunk/modules/operserv/akill.c (File Modified) 


w00t        2006/06/17 01:35:32 UTC	(20060617-5388)
  Log:
  - Add suppport for forced nick changes to InspIRCd protocol module through use of SVSNICK. Sent from server, not 'source', as InspIRCd requires a server send SVSNICK.

  Changes:	Modified:
  +9 -0		trunk/protocol/inspircd.c (File Modified) 


jilles      2006/06/15 17:01:40 UTC	(20060615-5386)
  Log:
  Better chanserv::changets description.
  

  Changes:	Modified:
  +12 -6	trunk/dist/example.conf (File Modified) 
  +12 -6	trunk/dist/example.userserv.conf (File Modified) 


jilles      2006/06/15 12:43:01 UTC	(20060615-5384)
  Log:
  P10: Fix global notices.
  

  Changes:	Modified:
  +1 -1		trunk/protocol/asuka.c (File Modified) 
  +1 -1		trunk/protocol/bircd.c (File Modified) 
  +1 -1		trunk/protocol/nefarious.c (File Modified) 
  +1 -1		trunk/protocol/undernet.c (File Modified) 


jilles      2006/06/14 19:13:04 UTC	(20060614-5382)
  Log:
  Fix compile breakage reported by Lauren.
  

  Changes:	Modified:
  +1 -1		trunk/protocol/inspircd.c (File Modified) 


brain       2006/06/14 14:40:41 UTC	(20060614-5380)
  Log:
  Add cmode +z (ssl only)
  

  Changes:	Modified:
  +1 -0		trunk/include/protocol/inspircd.h (File Modified) 
  +1 -0		trunk/protocol/inspircd.c (File Modified) 


jilles      2006/06/14 11:42:30 UTC	(20060614-5378)
  Log:
  Forced commit to note that the previous commit (r5376)
  changed MEMOLEN from 129 to 300.
  (svn doesn't seem to support forced commits so I removed
  a space somewhere)
  

  Changes:	Modified:
  +1 -1		trunk/include/common.h (File Modified) 

