@@ -4,7 +4,7 @@
  *
  * This file contains code for the CService RECOVER functions.
  *
- * $Id: recover.c 4681 2006-01-22 22:31:21Z jilles $
+ * $Id: recover.c 5396 2006-06-17 22:47:00Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"chanserv/recover", FALSE, _modinit, _moddeinit,
-	"$Id: recover.c 4681 2006-01-22 22:31:21Z jilles $",
+	"$Id: recover.c 5396 2006-06-17 22:47:00Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -49,6 +49,8 @@ static void cs_cmd_recover(char *origin)
 	char hostbuf[BUFSIZE], hostbuf2[BUFSIZE];
 	char e;
 	boolean_t added_exempt = FALSE;
+	int i;
+	char str[3];
 
 	if (!name)
 	{
@@ -125,6 +127,18 @@ static void cs_cmd_recover(char *origin)
 		mc->chan->modes &= ~CMODE_KEY;
 		free(mc->chan->key);
 		mc->chan->key = NULL;
+	}
+
+	/* stuff like join throttling
+	 * just remove all of these, we don't keep track of them
+	 * XXX only remove modes that could keep people out
+	 * -- jilles */
+	str[0] = '-';
+	str[2] = '\0';
+	for (i = 0; ignore_mode_list[i].mode != '\0'; i++)
+	{
+		str[1] = ignore_mode_list[i].mode;
+		cmode(chansvs.nick, mc->chan->name, str);
 	}
 
 	if (origin_cu != NULL)
